--- a/Dashboard/templates/index.html
+++ b/Dashboard/templates/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>IT Monitoring Dashboard</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+	<meta http-equiv="refresh" content="5">
+
 </head>
 <body>
     <h1>IT Monitoring Dashboard</h1>
